this is index.js file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <p>please,check the console to see the result of javasicrpt code execution</p>
         <p>incpect -> console tap</p>
         <p>thx for checking it</p>
-    
+        <script src = "index.js"></script>  
     
     </body>
 </html>
